[tool.poetry]
name = "gbm"
version = "0.3.0"
description = "GBM API"
authors = ["Joel Rivera <rivera@joel.mx>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
selenium = "^4.3.0"
selenium-requests = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
